# astock

./: .gitignore  CLAUDE.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: test.yml
config/: holdings.yaml  settings.yaml  watchlist.yaml
scripts/: backtest_signals.py
src/astock/: __init__.py  cli.py  config.py
src/astock/ai/: advisor.py  analyst.py  client.py  reviewer.py
src/astock/data/: cache.py  http.py  provider.py
src/astock/notify/: __init__.py  dispatch.py  feishu.py  mail.py  serverchan.py
src/astock/portfolio/: journal.py  manager.py  models.py
src/astock/render/: report.py  tables.py
src/astock/screen/: alerts.py  daemon.py  holdings_watcher.py  indicators.py  position_monitor.py  scanner.py  t_signals.py  t_signals_daemon.py  t_trading.py  watcher.py
src/astock/tools/: backtest.py  sizing.py
src/astock/web/: app.py  deps.py
src/astock/web/routes/: ai.py  alerts.py  api.py  dashboard.py  export.py  journal.py  scan.py  tools.py  trade.py  tscore.py
src/astock/web/templates/: _macros.html  advise.html  alerts.html  analyze.html  analyze_batch.html  analyze_batch_result.html  backtest.html  backtest_batch.html  base.html  dashboard.html  journal.html  optimize.html  placeholder.html  review.html  scan.html  sizing.html  trade.html  tscore.html  tscore_detail.html  tscore_training.html
src/astock/web/templates/partials/: ai_result.html  ai_stream.html  alerts_hits.html  kpi_row.html  portfolio_table.html  (+1 more)
tests/: test_alerts.py  test_backtest.py  test_indicators.py  test_journal.py  test_sizing.py  test_t_signals.py
