[project]
name = "astock"
version = "0.1.0"
description = "AI Agent for Chinese A-Share Investors"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.14.0",
    "pandas>=2.0",
    "anthropic>=0.40.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "markdown>=3.5",
]

[project.scripts]
astock = "astock.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astock"]
